# omniMD

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  ls_remote_output.txt  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  rust-ubuntu-24.yml  rust.yml
benches/: argon.rs  nacl.rs  propane.rs  water.rs
benches/data/: argon.toml  nacl.toml  propane.toml  water.toml
benches/utils/: mod.rs
doc/: KaTeX.html  Makefile  README.md  index.html  requirements.txt
doc/src/: conf.py  faq.rst  index.rst  installation.rst
doc/src/advanced/: index.rst
doc/src/concepts/: index.rst  simulation.rst  system.rst  units.rst
doc/src/data/: argon.toml  argon.xyz  nacl.toml  pack.sh  water-fSCP.toml  water.toml
doc/src/input/: index.rst  input.rst  log.rst
doc/static/: lumol.css
doc/templates/: layout.html  sidebar-toc.html
examples/: argon.rs  binary.rs  custom-potential.rs  ethane.toml  input.rs  minimization.rs  nacl.rs  xenon.rs
examples/data/: binary.toml  ethane.xyz  nacl.toml  nacl.xyz  simulation.toml  spce.xyz  xenon.xyz
omnimd-core/: Cargo.toml
omnimd-core/src/: consts.rs  lib.rs  math.rs  units.rs
omnimd-core/src/energy/: computations.rs  functions.rs  mod.rs  pairs.rs  restrictions.rs
omnimd-core/src/energy/global/: ewald.rs  mod.rs  torch_potential.rs  wolf.rs
omnimd-core/src/sys/: cache.rs  chfl.rs  compute.rs  energy.rs  interactions.rs  mod.rs  system.rs
omnimd-core/src/sys/config/: bonding.rs  cells.rs  composition.rs  configuration.rs  connect.rs  mass.rs  mod.rs  molecules.rs  particles.rs
omnimd-core/src/types/: arrays.rs  complex.rs  matrix.rs  mod.rs  vectors.rs
omnimd-core/src/utils/: macros.rs  mod.rs  thread_vec.rs  xyz.rs
omnimd-input/: Cargo.toml
omnimd-input/src/: alternator.rs  error.rs  extract.rs  lib.rs
omnimd-input/src/interactions/: angles.rs  coulomb.rs  global.rs  mod.rs  pairs.rs  potentials.rs
omnimd-input/src/simulations/: logging.rs  mc.rs  md.rs  min.rs  mod.rs  outputs.rs  propagator.rs  simulations.rs  system.rs
omnimd-input/tests/: README.md  input.rs
omnimd-input/tests/interactions/bad/: angles.toml  bonds.toml  born.toml  buckingham.toml  charges.toml  cos-harmonic.toml  coulomb.toml  dihedrals.toml  gaussian.toml  harmonic.toml  lj.toml  mie.toml  morse.toml  pairs.toml  torsion.toml  version.toml
omnimd-input/tests/interactions/good/: angles.toml  bonds.toml  dihedrals.toml  ewald.toml  pairs.toml  wolf.toml
omnimd-input/tests/simulation/: CO2.xyz
omnimd-input/tests/simulation/bad/: controls.toml  integrator.toml  log.toml  mc-acceptance.toml  mc-move.toml  mc-update-frequency.toml  mc.toml  md.toml  minimization.toml  outputs.toml  simulations.toml  system.toml  thermostat.toml  version.toml
omnimd-input/tests/simulation/good/: logging.toml  mc.toml  md-1.toml  md-2.toml  md-3.toml  md-4.toml  md.toml  min.toml  potentials.toml  system.toml
omnimd-sim/: Cargo.toml
omnimd-sim/src/: lib.rs  propagator.rs  simulations.rs  velocities.rs
omnimd-sim/src/mc/: mod.rs  monte_carlo.rs
omnimd-sim/src/mc/moves/: mod.rs  resize.rs  rotate.rs  translate.rs
omnimd-sim/src/md/: controls.rs  integrators.rs  mod.rs  molecular_dynamics.rs  thermostats.rs
omnimd-sim/src/min/: minimization.rs  mod.rs  steepest_descent.rs
omnimd-sim/src/output/: cell.rs  custom.rs  energy.rs  forces.rs  mod.rs  properties.rs  stress.rs  tests.rs  trajectory.rs
omnimd-sim/tests/: thermostats.rs
scripts/: generate_mock_model.py  requirements.txt
scripts/ci/: check-whitespaces.py  generate-docs.sh  install-travis.sh  list-test-executables.py  setup-travis.sh
src/: input.rs  lib.rs  main.rs  sim.rs
tests/: docs.rs  mc-argon.rs  mc-ethane.rs  mc-helium.rs  mc-water.rs  md-butane.rs  md-helium.rs  md-methane.rs  md-nacl.rs  md-water.rs  nist-lj.rs  nist-spce.rs
tests/utils/: mod.rs
tutorials/potential/: Cargo.toml
(+81 files in other folders)
