[package]
name = "omnimd-core"
version = "0.0.0"
authors = ["Siqi Tang <siqit@outlook.com>"]
documentation = "https://lumol.org/"
repository = "https://github.com/TANG-LAB-WHU/omniMD"
readme = "../README.md"
license = "MIT"
edition = "2021"

[lib]
bench = false

[dependencies]
bitflags = "2"
chemfiles = "0.10"
lazy_static = "1"
log-once = "0.4"
ndarray = "0.15"
num-traits = "0.2"
rayon = "1"
soa_derive = "0.13"
special = "0.10"
thread_local = "1"
tch = "0.19.0"

[dependencies.log]
version = "0.4"
features = ["std"]

[dev-dependencies]
tempfile = "3"
approx = "0.5"
