[package]
name = "omnimd-input"
version = "0.0.0"
authors = ["Siqi Tang <siqit@outlook.com>"]
documentation = "https://lumol.org/"
repository = "https://github.com/TANG-LAB-WHU/omniMD"
readme = "../README.md"
license = "MIT"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
omnimd-core = {path = "../omnimd-core"}
omnimd-sim = {path = "../omnimd-sim"}
toml = "0.8"
log = "0.4"
anyhow = "1"

[dependencies.log4rs]
version = "1"
# log4rs has a enormous ammount of features pulling a lot of crates.
# Since we don't need most of them, we selectively enable the ones we want.
default-features = false
features = ["console_appender", "file_appender", "threshold_filter"]

[dev-dependencies]
walkdir = "2"
rustc-test = "0.3"
env_logger = "0.11"

[[test]]
name = "input"
harness = false
