[package]
name = "omnimd-sim"
version = "0.0.0"
authors = ["Siqi Tang <siqit@outlook.com>"]
documentation = "https://lumol.org/"
repository = "https://github.com/TANG-LAB-WHU/omniMD"
readme = "../README.md"
license = "MIT"
edition = "2018"

[lib]
bench = false

[dependencies]
omnimd-core = {path = "../omnimd-core"}
rand = "0.8"
rand_distr = "0.4"
rand_xorshift = "0.3"
log = "0.4"
log-once = "0.4"
caldyn = "0.4"
soa_derive = "0.13"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
